borra la trivia de ia y todod lo refenrente a ia quita esa funcion

--- a/src/lib/i18n/en.json
+++ b/src/lib/i18n/en.json
@@ -2,7 +2,7 @@
 {
   "welcome": {
     "title": "Crypto Trivia Showdown",
-    "subtitle": "Test your crypto knowledge, compete against others, and generate your own quizzes with the power of AI.",
+    "subtitle": "Test your crypto knowledge, compete against others, and prove you're a trivia master.",
     "cta": "Enter Game",
     "feature1": {
       "title": "AI-Powered Trivia",
