--- a/src/lib/i18n/es.json
+++ b/src/lib/i18n/es.json
@@ -2,7 +2,7 @@
 {
   "welcome": {
     "title": "Crypto Trivia Showdown",
-    "subtitle": "Pon a prueba tus conocimientos sobre criptomonedas, compite contra otros, y genera tus propias trivias con el poder de la IA.",
+    "subtitle": "Pon a prueba tus conocimientos sobre criptomonedas, compite contra otros y demuestra que eres un maestro de la trivia.",
     "cta": "Entrar al Juego",
     "feature1": {
       "title": "Trivia con IA",
