coloca el icono de idioma de otro clor mas resantante y colocal el texto

--- a/src/lib/i18n/en.json
+++ b/src/lib/i18n/en.json
@@ -204,7 +204,8 @@
     }
   },
   "language_switcher": {
-    "tooltip": "Change language"
+    "tooltip": "Change language",
+    "title": "Language"
   },
   "classic_questions": [
     {
