--- a/src/lib/i18n/es.json
+++ b/src/lib/i18n/es.json
@@ -204,7 +204,8 @@
     }
   },
   "language_switcher": {
-    "tooltip": "Cambiar idioma"
+    "tooltip": "Cambiar idioma",
+    "title": "Idioma"
   },
   "classic_questions": [
     {
